# edge-ai-suites

./: README.md
.github/: CODEOWNERS
.github/workflows/: pre-merge.yml  robotics-components-object-detection.yaml  robotics-components.yaml  visual-search-qa-scans.yml
education-ai-suite/: README.md
education-ai-suite/smart-classroom/: README.md  main.py
education-ai-suite/smart-classroom/docs/user-guide/: get-started.md  release-notes.md
manufacturing-ai-suite/industrial-edge-insights-time-series/docs/user-guide/: get-started.md  index.md
manufacturing-ai-suite/industrial-edge-insights-vision/: .env  .env_pcb_anomaly_detection  .env_weld_porosity_classification  .env_worker_safety_gear_detection
manufacturing-ai-suite/industrial-edge-insights-vision/apps/pallet-defect-detection/: README.md
manufacturing-ai-suite/industrial-edge-insights-vision/apps/pcb-anomaly-detection/: payload.json
manufacturing-ai-suite/industrial-edge-insights-vision/docs/user-guide/: index.md
manufacturing-ai-suite/industrial-edge-insights-vision/helm/: values.yaml  values_pcb_anomaly_detection.yaml  values_weld_porosity_classification.yaml  values_worker_safety_gear_detection.yaml
manufacturing-ai-suite/spine-app/: .env  docker-compose.yml
manufacturing-ai-suite/spine-app/pallet-defect-detection/configs/: config.json
manufacturing-ai-suite/wind-turbine-anomaly-detection/docs/user-guide/: get-started.md  how-to-configure-alerts.md  how-to-configure-custom-udf.md
metro-ai-suite/: README.md
metro-ai-suite/image-based-video-search/: compose.yml
metro-ai-suite/image-based-video-search/chart/: values.yaml
metro-ai-suite/image-based-video-search/compose/compose-linux-v1.0.0/: compose-linux-v1.0.0.yml
metro-ai-suite/image-based-video-search/src/feature-matching/: requirements.txt
metro-ai-suite/interactive-digital-avatar/: requirements.txt
metro-ai-suite/metro-vision-ai-app-recipe/: compose-scenescape.yml
metro-ai-suite/metro-vision-ai-app-recipe/smart-intersection/chart/: values.yaml
metro-ai-suite/sensor-fusion-for-traffic-management/ai_inference/test/: CLSensorFusionDisplay.cpp
metro-ai-suite/sensor-fusion-for-traffic-management/deployments/how_to_generate_kitti_format_dataset/: requirements.txt
metro-ai-suite/sensor-fusion-for-traffic-management/deployments/how_to_support_yolov6_model/: requirements.txt
metro-ai-suite/sensor-fusion-for-traffic-management/docker/: .env  docker-compose.yml
metro-ai-suite/sensor-fusion-for-traffic-management/docs/user-guide/: index.md  release-notes.md
metro-ai-suite/smart-nvr/: setup.sh
metro-ai-suite/smart-nvr/docs/user-guide/: get-started.md
metro-ai-suite/smart-route-planning-agent/: .gitignore  README.md  setup.sh
metro-ai-suite/smart-route-planning-agent/docs/user-guide/: Overview.md  environment-variables.md  get-started.md  how-to-build-from-source.md  release-notes.md  system-requirements.md  traffic-data-analysis-workflow.md
metro-ai-suite/smart-route-planning-agent/src/: .dockerignore  Dockerfile  compose.yaml  config.py  health_check.py  main.py  pyproject.toml  schema.py
metro-ai-suite/smart-route-planning-agent/src/agents/: __init__.py  planner_state.py  route_planner.py
metro-ai-suite/smart-route-planning-agent/src/controllers/: __init__.py  live_traffic.py  planned_events.py  route_interface.py  static_optimizer_factory.py  threshold.py  traffic_trends.py  weather_report.py
metro-ai-suite/smart-route-planning-agent/src/data/: config.json  game.json
metro-ai-suite/smart-route-planning-agent/src/data/csv/: planned_events.csv  traffic_trends.csv  weather_report.csv
metro-ai-suite/smart-route-planning-agent/src/data/routes/: berkeley-dublin-sanjose.gpx  berkeley-eastpaloalto.gpx  berkeley-oakland-i880.gpx  berkeley-sanbruno-sunnyvale.gpx  berkeley-sanbruno.gpx
metro-ai-suite/smart-route-planning-agent/src/services/: route_service.py
metro-ai-suite/smart-route-planning-agent/src/tests/: test_logging.py
metro-ai-suite/smart-route-planning-agent/src/utils/: __init__.py  gpx_parser.py  helper.py  logging_config.py  map_creator.py
metro-ai-suite/smart-traffic-intersection-agent/: setup.sh
metro-ai-suite/smart-traffic-intersection-agent/docker/: compose.yaml
metro-ai-suite/smart-traffic-intersection-agent/docs/user-guide/: build-from-source.md  get-started.md
metro-ai-suite/smart-traffic-intersection-agent/src/: README.md  __init__.py  docker-entrypoint.sh  main.py  run.py
metro-ai-suite/smart-traffic-intersection-agent/src/api/: __init__.py  routes.py
metro-ai-suite/smart-traffic-intersection-agent/src/config/: traffic_agent.json
metro-ai-suite/smart-traffic-intersection-agent/src/models/: __init__.py  enums.py  (+3 more)
metro-ai-suite/smart-transportation/: .env
retail-ai-suite/: README.md
robotics-ai-suite/: README.md
robotics-ai-suite/components/object-detection/: .gitattributes  Makefile  README.md  REUSE.toml
robotics-ai-suite/components/object-detection/yolov8/src/yolo/: CMakeLists.txt  package.xml
robotics-ai-suite/components/object-detection/yolov8/src/yolo/humble/debian/: changelog  control  rules
robotics-ai-suite/components/object-detection/yolov8/src/yolo/jazzy/debian/: changelog  control  rules
robotics-ai-suite/components/object-detection/yolov8/src/yolo/src/: Constants.hpp  Detection.hpp  ImageSync.hpp  PerforamceStats.hpp  Pipeline.hpp  PythonDownload.hpp  QueryFrame.hpp  ThreadSafeQueue.hpp  YoloBenchmark.cpp  YoloMain.cpp  tests.cpp
(+114 files in other folders)
